--- a/templates/base.html
+++ b/templates/base.html
@@ -201,6 +201,13 @@
   </div>
 
   <div class="content">
+    {% if messages %}
+    <div class="mb-2">
+      {% for message in messages %}
+        <div class="alert alert-{{ message.tags }} py-2 mb-2" role="alert">{{ message }}</div>
+      {% endfor %}
+    </div>
+    {% endif %}
     {% block content %}
     {% endblock %}
   </div>
